# transfer-station-behavior-detection

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 方向丁_中转站投毒客户端检测_设计_2026-07.md  论文方向与完整思路_交接_2026-07.md
relaypoison/: __init__.py  backends.py  capabilities.py  detectors.py  evaluate.py  llm_client.py  models.py  relay.py
scripts/: run_relaypoison_pilot.py
tests/: test_relaypoison.py
